Fixed rights icon alignment

--- a/src/main/webapp/themes/default/css/europeana-font-icons.css
+++ b/src/main/webapp/themes/default/css/europeana-font-icons.css
@@ -330,7 +330,7 @@ span.rights-icon.icon-cczero{
 	margin-top:	.18em;
 }
 
-span.rights-icon.icon-cc, span.rights-icon.icon-by, span.rights-icon.icon-sa, span.rights-icon.icon-nc, span.rights-icon.icon-nd{
+span.rights-icon.icon-cc, span.rights-icon.icon-by, span.rights-icon.icon-sa, span.rights-icon.icon-nc, span.rights-icon.icon-nceu, span.rights-icon.icon-nd{
 	margin-top:	.215em;
 }
 
